--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -1,17 +1,21 @@
 .slider {
+  display: flex;
+  align-items: center;
   position: relative;
-  width: 100%;
-  max-width: 600px;
-  margin: 10px auto;
-  overflow: hidden;
 }
 
-.slides img {
+.slides {
+  display: flex;
+  width: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+
+img {
   width: 100%;
   display: none;
 }
 
-.slides img.active {
+img.active {
   display: block;
 }
 
@@ -21,15 +25,19 @@
   position: absolute;
   top: 50%;
   width: auto;
-  margin-top: -22px;
   padding: 16px;
-  color: rgb(253, 250, 250);
+  margin-top: -22px;
+  color: rgb(255, 255, 255);
   font-weight: bold;
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 15px;
   user-select: none;
-  background-color: transparent;
+  background: transparent;
+}
+.prev:hover,
+.next:hover {
+  background-color: rgb(33, 44, 73);
 }
 
 .prev {
@@ -40,7 +48,22 @@
   right: 0;
 }
 
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
+.dots {
+  text-align: center;
+  padding: 10px;
+}
+
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.dot.active {
+  background-color: #717171;
 }
