--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -10,13 +10,13 @@
   transition: transform 0.5s ease-in-out;
 }
 
-img {
-  width: 100%;
+img.inactive {
   display: none;
 }
 
 img.active {
   display: block;
+  width: 100%;
 }
 
 .prev,
